# SCV_Perception

./: .gitignore  README.md
SSC-Perception/: CMakeLists.txt  package.xml
bev_converter/: CMakeLists.txt  package.xml
bev_converter/config/: camera_params.yaml
bev_converter/launch/: bev_node.launch
bev_converter/rviz/: bev.rviz
bev_converter/scripts/: bev_node.py  depth_seg_and.py  test_homography.py
depth_anything/: CMakeLists.txt  package.xml
depth_anything/launch/: ardu_depth_estimation.launch  arducam_depth_esimation.launch  depth_esimation_bae.launch  depth_estimation.launch
depth_anything/node_scripts/: depth_estimation_node.py  utils.py
depth_anything/scripts/: depth_correction.py  depth_to_points.py
depth_anything/src/: depth_anything.cpp
lane_detection/: CMakeLists.txt  package.xml  setup.py
lane_detection/launch/: lane_IPM.launch  lane_IPM_temp.launch  lane_depth.launch  yolop_lane_detection.launch
lane_detection/scripts/: lane_depth_fusion.py  lane_depth_to_cloud.py  lane_to_scan_IPM.py  yolop_lane_detection.py
lane_detection/tools/: roi_tool.py
lidar_camera_fusion/cfg/: cam_cfg_params.yaml  zed_cfg_params.yaml
object_depth_tracker/: CMakeLists.txt  package.xml
scan_range_stop_flag/: CMakeLists.txt  package.xml
slam_localization/: CMakeLists copy.txt  CMakeLists.txt  package.xml
slam_localization/data/: map3.pcd.utm
slam_localization/src/: publish_pcd.cpp
traffic_light_detection/: CMakeLists.txt  package.xml
traffic_light_detection/src/: for_SSC.py  (+7 more)
ultralytics_ros/: CMakeLists.txt
ultralytics_ros2/: package.xml  requirements.txt  setup.py
ultralytics_ros2/launch/: seg.launch.py
ultralytics_ros2/ultralytics_ros2/: seg_run.py
(+88 files in other folders)
